src/objects/RMA_Serial_Number_Owner__mdt/RMA_Serial_Number_Owner__mdt.object-meta.xml
<CustomObject>
    <label>RMA Serial Number Owner</label>
    <pluralLabel>RMA Serial Number Owners</pluralLabel>
</CustomObject>