src/objects/RMA_Serial_Number_Owner__mdt/fields/Form_Factor__c.field-meta.xml
<CustomField>
    <fullName>Form_Factor__c</fullName>
    <label>Form Factor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>