src/objects/RMA_Serial_Number_Owner__mdt/fields/Marketing_Family__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Family__c</fullName>
    <label>Marketing Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>