src/objects/RMA_Serial_Number_Owner__mdt/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>