src/objects/RMA_Serial_Number_Owner__mdt/listViews/All_Fields_All_Views.listView-meta.xml
<ListView>
    <fullName>All_Fields_All_Views</fullName>
    <columns>Owner__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>End_Customer__c</columns>
    <columns>Location__c</columns>
    <columns>Marketing_Family__c</columns>
    <columns>Product_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields All Views</label>
</ListView>